revise conclusion heavily

--- a/draft.tex
+++ b/draft.tex
@@ -350,21 +350,23 @@ The value of truth telling by the mediator has been examined in the literature. 
 \section{Conclusion}
 In states of perpetual conflict, concessions have been shown in the literature to ease distrust. Our paper shows a mechanism by which this might work. In our model's setup, there are three classes of interesting equilibria: first, if prior trust is low a no-concessions pooling equilibrium exists, which is essentially a state of war for all types. Second, if prior trust is sufficiently high, a no-concessions pooling equilibrium exists where high types trust in the first period and can maintain that trust if both are high types. Third, the most intuitive or realistic type of equilibrium, a concessions giving separating equilibrium exists where high types offer concessions to eliminate the distrust. 
 
-While parties generally are better off when concessions are efficient, we have shown that inefficiency may be useful. In particular, if concessions may be used for further material harm against the giver, it may be better to give inefficient concessions. This explanation captures the hesitancy of nations to fully engage in moving forward with a peace process when there is mutual distrust. %As previously shown in the literature, if parties are trying to enter a club or alliance, it may be necessary to give inefficient concessions. %Our model can achieve that result, first shown in Camerer (1988), that inefficiency plays a role in pre-play communication and can be used to separate out unwanted partners. Our model can also be used to achieve a similar matching result as Prendergast and Stole (2001) who show how if player values his own type, inefficiency can be preferred. To achieve this countries must have preferences over the types of the recipients of their concessions. If there is a regret of giving a concession to a country who does not pan out to be an ally, then inefficiency can be preferred. While this is a relatively behavioral or emotional explanation for interpersonal gift giving, it might hold some weight in an international political arena. This flavor, of matching types, is similar in nature to Prendergast and Stole, who use two different, though equal types, while our explanation uses a high and a low type.
+While parties generally are better off when concessions are efficient, we have shown that inefficiency may be useful. In particular, if concessions may be used to harm the giver materially, it may be better to give inefficient concessions. This explanation captures the hesitancy of nations to fully engage in moving forward with a peace process when there is mutual distrust. %As previously shown in the literature, if parties are trying to enter a club or alliance, it may be necessary to give inefficient concessions. %Our model can achieve that result, first shown in Camerer (1988), that inefficiency plays a role in pre-play communication and can be used to separate out unwanted partners. Our model can also be used to achieve a similar matching result as Prendergast and Stole (2001) who show how if player values his own type, inefficiency can be preferred. To achieve this countries must have preferences over the types of the recipients of their concessions. If there is a regret of giving a concession to a country who does not pan out to be an ally, then inefficiency can be preferred. While this is a relatively behavioral or emotional explanation for interpersonal gift giving, it might hold some weight in an international political arena. This flavor, of matching types, is similar in nature to Prendergast and Stole, who use two different, though equal types, while our explanation uses a high and a low type.
 %I have further shown that 
 
-However, there must be a caveat about modeling concessions. The initial thought would be that it is somewhat abstract to model a concession as a number. However it is not necessarily insufficient as often times concessions really do come in sizes, for example the number of prisoners released, an amount of land ceded, or an amount of time given to carry out actions. So the magnitude of concessions can indeed vary. But while magnitudes vary, the real caveat is that the nature of the concessions is sometimes non-negotiable. For instance if one country demands release of hostages, it is not possible -- or at least not realistic -- for the other country to give the equivalent value in land, cash or weapons.
+At first glance, it may seem somewhat abstract to model a concession as a number. However, the magnitude of concessions can indeed vary: often concessions really do come in sizes, for example the number of prisoners released, an amount of land ceded, or an amount of time given to carry out actions. But while magnitudes often do vary, this points to a very real caveat. The nature of the concessions is sometimes non-negotiable. For instance if one country demands release of hostages, it is not possible -- or at least not realistic -- for the other country to give the equivalent value in land, cash or weapons.
 
-In practice, in ``sons of the soil'' conflicts, concessions are indivisible (Walter 2002), therefore if inefficient concessions need to be given, no concessions will be in fact given as an inefficient concession is an impossibility. The full value is the only concession worth making because it is the only one that will be accepted. Inefficient concessions can have the same signaling value, but unless signaling is the only facet of a concession that is valued, this is not enough. Therefore when we think about concessions, we should think about their nature as being fixed. With this in mind, we can then accurately consider whether concessions are of sufficient size. These observations do not undermine the model.  Countries may prefer to give inefficient concessions; they do not necessarily prefer to receive them. 
+In practice, in ``sons of the soil'' conflicts, concessions are indivisible (Walter 2002); if inefficient concessions need to be given to achieve peace, in the absence of a mediator no concessions will be given as an inefficient concession is an impossibility. The full value is the only concession worth making because it is the only one that will be accepted: although countries may prefer to give inefficient concessions, they obviously do not prefer to receive them. Inefficient concessions can have the same signaling value as efficient concessions, but unless signaling is the only facet of a concession that is valued, this is not necessarily enough to achieve peace.
 
-The effectiveness of mediation is debated in the literature; this paper shows that a third party mediator can remedy the inefficiency if she is trusted. One contribution of this paper is to show the mechanisms through which a mediator can help. Since the mediator eliminates inefficient concessions, the observation that inefficient concession may not do the trick only underscores the potential value of a mediator.
+This points out that when we think about concessions, we should think about their nature as being fixed. With this in mind, we can then accurately consider whether concessions are of sufficient size. These observations do not undermine the model. The nature of the desired concessions helps determine whether inefficient concessions can help achieve peace when efficient concessions cannot and thus also when a mediator can restore the efficiency of concessions.
+
+The effectiveness of mediation is debated in the literature; this paper shows that a third party mediator can remedy a particular kind of inefficiency if she is trusted. One contribution of this paper is to show the mechanisms through which a mediator can help. Since the mediator eliminates inefficient concessions, the observation that inefficient concessions may not do the trick only underscores the potential value of a mediator.
 %our model can also be used to achieve a similar matching result as Prendergast and Stole (2001) who show how if player values his own type, inefficiency can be preferred. 
 
-While this model uses manipulative mediation, which is indeed used in resolving conflicts, the usefulness of mediation relies on perfect trust of the mediator. Such an all-powerful mediator is a strong assumption, and while useful as a benchmark, it is unlikely to exist in most scenarios. It would be useful as a further exercise to examine the effectiveness of mediators with different strengths of enforcement capabilities. 
+This model uses manipulative mediation, which is indeed used in resolving conflicts. However, the usefulness of mediation relies on perfect trust of the mediator. Such an all-powerful mediator is a strong assumption, and while useful as a benchmark, it is unlikely to exist in all scenarios. It would be useful as a further exercise to examine the effectiveness of mediators with different strengths of enforcement capabilities. 
 
-While it is an important theoretical result to show how a mediator can help conflict situations, it should also be noted that mediation is not free, at least to the providing (third) party. Therefore, the inefficiencies borne by the inefficient concessions and/ or by the ongoing conflict must not be outweighed by the cost of providing the mediation. If the model accurately captures the costs, the expected savings of mediation can be calculated and therefore the value of mediation in a specific scenario can be determined. This will allow the mediator to analyze whether her involvement is worthwhile. 
+While it is important theoretically to show how a mediator can help in conflict situations, it should also be noted that mediation is not free, at least to the providing (third) party. Therefore, the inefficiencies borne by the inefficient concessions and/or by the ongoing conflict must not be outweighed by the cost of providing the mediation. If the model accurately captures the costs, the expected savings of mediation can be calculated and therefore the value of mediation in a specific scenario can be determined. This will allow the mediator to analyze whether her involvement is worthwhile. 
 
-This paper succeeds in showing a role for inefficient concessions, and shows how a mediator can remedy this situation. Opportunities for further research clearly include looking at the roles of different types of mediation. Because of the many humanitarian, security and diplomatic implications of this work, both deeper and broader analysis is required.
+This paper shows that inefficient concessions may be used to achieve peace when efficient concessions are not sufficient to do so; it also demonstrates how a mediator can achieve peace in these situations without resorting to inefficient concessions. Opportunities for further research clearly include looking at the roles of different types of mediation. Because of the many humanitarian, security and diplomatic implications of this work, both deeper and broader analysis is required.
 %This said, if the paper is really about mediation, then the mediator needs more scrutiny. What are the mediator’s incentives? Why should he reveal truthfully what the parties tell him? It would seem simple enough to make the mediator part of the game, with an payment function that is a fraction of the surplus from eliminating the inefficiency. This leads to interesting implications. Given some cost to the mediator, they will be more likely to volunteer when e* is large, etc. But treating the mediator as a deus ex machina leaves the current model incomplete.
 
 
