add reference to Watson 1999 and explanation of Horner 2010 benchmark as suggested by reviewers

--- a/draft.tex
+++ b/draft.tex
@@ -87,7 +87,7 @@ In efforts to explain the existence of gift giving,  Camerer (1988) and Van de V
 
 Camerer's model includes players that have one period to signal before they decide whether to partner. There are two types, high types and low types, and a separating equilibrium is characterized by a threshold gift that is necessary for high types to reveal themselves while low types do not send a gift (or send a gift of  zero cost). Two high types who have just received each other's gifts will then choose to create a partnership with a positive payoff; other combinations will not find it economical to form a partnership.
 
-Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts. In order to explain inefficiency, Camerer adds in an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. %While pre-play communication can lead to inefficient gift-giving, it is not realistic to think that partnership formation generally has this structure, therefore while Camerer's explanation is theoretically sound, it lacks the ability to be a general explanation for inefficient gifts. 
+Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts.\footnote{In an environment with repeated opportunities for concessions Watson (1999) is able to show that a strong relationship can be reached by starting with small ``gifts'' and increasing their size as the relationship becomes more committed. See Van de Ven (2000) for an overview of this literature.} In order to explain inefficiency, Camerer adds in an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. %While pre-play communication can lead to inefficient gift-giving, it is not realistic to think that partnership formation generally has this structure, therefore while Camerer's explanation is theoretically sound, it lacks the ability to be a general explanation for inefficient gifts. 
 
 %Iannaccone (1992), Rabin (1993),  Kranton (1996) and Carmichael and MacLeod (1997) all use a similar explanation for inefficient gifts with various modifications to the model. In an environment with repeated opportunities for concessions Watson (1996, 1999) is able to show that a strong relationship can be reached by starting with small gifts and increasing their size as the relationship becomes more committed.\footnote{See Van de Ven (2000) for an overview of this literature.}  
 
@@ -344,7 +344,7 @@ The low type leader can bluff in the bilateral setting but not when a mediator i
 
 The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be an important factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
 
-The value of truth telling by the mediator has been examined in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction. In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
+The value of truth telling by the mediator has been examined in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction.\footnote{Horner et al. (2010) take cheap talk communication as their benchmark of unmediated communication, whereas we take the unmediated signaling game as our benchmark.} In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
 
 
 \section{Conclusion}
@@ -574,7 +574,7 @@ and Strategic Militarization.'' Unpublished manuscript.
 
 \item Waltz, Kenneth (2001).  \emph {Man, the State and War: A Theoretical Analysis.} New York : Columbia University Press. %ref cites page 159
 
-\item Watson, Joel (1996). ``Building a Relationship,'' Unpublished manuscript. 
+%\item Watson, Joel (1996). ``Building a Relationship,'' Unpublished manuscript. 
 
 \item Watson, Joel. (1999). ``Starting Small and Renegotiation,'' {Journal of Economic Theory} 85:1, 52-90.
 
