add IC constraints to mediation section. Realize they don't hold.

--- a/draft.tex
+++ b/draft.tex
@@ -318,6 +318,12 @@ The model setup is as before, but instead of parties being free to give whatever
 
 $M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. $M$ can differentiate based on recipient's type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value: both individual rationality and incentive compatibility constraints must be satisfied, leading to truthful self-identification. 
 
+low type IC
+$$X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-pg_h+peg_h $$
+
+high type IC:
+$$pX_{TT}^h+(1-p)X_{FF}^h - pg_h +peg_h \geq X_{FF}^h $$
+
 The welfare target is again the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. 
 
 \begin{theorem}
