Add notes on civil society vs military choices

--- a/notes.tex
+++ b/notes.tex
@@ -76,6 +76,43 @@ bookmarksopen=true]{hyperref}
 			\end{itemize}
 \end{itemize}
 
+\subsection{Civil society investment choices}
+In a concessions separating equilibrium or in the mechanism, the high type always has the incentive to invest all of the gift in civil socity
+	\begin{itemize}
+		\item If there is an exchange of gifts (whether in the mechanism or a truthfully revealed separating equilibrium), you know you're both receiving from and giving to a high type
+		\item \textbf{I should check this in all the scenarios to make sure we don't invoke it when it's not right}
+			\begin{itemize}
+				\item \textbf{I also want to know whether it depends on the linear form}
+				\item \textbf{Make more explicit in the text}
+			\end{itemize}
+	\end{itemize}
+$\al_i$ is the proportion of the gift that country $i$ receives that it invests in civil society.
+	\begin{itemize}
+		\item $\al_i = 1$ means the whole value of the gift is invested in civil society. High types make this choice
+			\begin{itemize}
+				\item $\al_i = 0$ means the whole value of the gift is invested in military buildup
+			\end{itemize}
+			
+		\item High type of Country 1 chooses $\al_1=1$ (all into civil society) 
+			\begin{itemize}
+				\item $(1-\al_1) = 0$ (nothing into military)
+			\end{itemize}
+		\item Low type of Country 1 chooses $\al_1=0$ (nothing into civil society) 
+			\begin{itemize}
+				\item $(1-\al_1) = 1$ (all into military)
+			\end{itemize}
+		\item High type of Country 2 chooses $\al_2=1$ (all into civil society) 
+			\begin{itemize}
+				\item $(1-\al_2) = 0$ (nothing into military)
+			\end{itemize}
+		\item Low type of Country 2 chooses $\al_2=0$ (nothing into civil society) 
+			\begin{itemize}
+				\item $(1-\al_2) = 1$ (all into military)
+			\end{itemize}	
+	\end{itemize}
+
+
+
 \subsection{Why does low type IC not hold when $e=1$?}
 $$X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-pg_h+peg_h $$
 \begin{itemize}
@@ -126,10 +163,12 @@ $$X_{FF}^l \geq pX_{FT}^l+(1-p)X_{FF}^l-pg_h+peg_h $$
 					Assuming $g_M > 0$, this inequality can never hold since each of $T,W,D\geq0$ and $0 \leq \left(1 - \de^l \right) \leq 1$	
 					\begin{itemize}
 						\item What would it mean to have negative gifts?
-					\end{itemize}
-					
+					\end{itemize}					
 			\end{itemize}
 \end{itemize}
+
+\subsection{What if gifts are inefficient?}
+*** THIS IS THE NEXT STEP IN THE ANALYSIS *** Here we would be using inefficient gifts to get the low type to truthfully reveal.
 
 
 \vskip.5in
